# phoenix_bt_improve

./: .gitignore  135135.torrent  CLAUDE.md  PS.md  README.md  RELEASE_NOTES.md  curl_response.html  pyproject.toml  requirements.txt  上传页面.html  如何制作、上传种子.html  未来技术方向.md  本地助手开发计划.md  测试下载.torrent  金凤复兴计划.md
docs/superpowers/plans/: 2026-05-29-bt-status-fix.md  2026-05-30-resumable-upload.md
docs/superpowers/specs/: 2026-05-29-bt-status-fix-design.md  2026-05-30-resumable-upload-design.md
phoenix_mobile/: .gitignore  README.md  build_apk.sh  pubspec.yaml
phoenix_mobile/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
phoenix_mobile/android/app/: build.gradle.kts
phoenix_mobile/ios/Runner.xcodeproj/: project.pbxproj
phoenix_mobile/lib/: app.dart  main.dart
phoenix_mobile/test/: widget_test.dart
scripts/: browser_login.py  browser_upload.py  build_onedir.py  build_webengine.py  build_webengine_clean.py  build_windows.py  build_windows_clean.py  compare_torrent.py  configure_qbittorrent.py  download_drivers.py  driver_factory.py  fetch_quota.py  parse_utorrent_settings.py  run_app.py  test_http_e2e.py  test_http_upload.py  test_http_upload_v2.py  test_login.py
src/phoenix_helper/: app.py  config.py  models.py
tests/: test_bencode.py  test_build_windows.py  test_build_windows_clean.py  test_config.py  test_cookies.py  test_discovery.py  test_phoenix_client.py  test_phoenix_forms.py  test_torrent_creator.py
如何制作、上传种子_files/: ScriptResource(1).axd  ScriptResource.axd  baidutongji.js.下载  ctTools.js.下载  hm.js.下载  site.css
(+65 files in other folders)
